localize & collect attribute validation errors
#4476